erDiagram
%% -------------- Tables --------------

  tenants {
    INT id PK
    VARCHAR name
    TIMESTAMP created_at
    TIMESTAMP updated_at
  }

  users {
    INT id PK
    INT tenant_id FK
    VARCHAR first_name
    VARCHAR last_name
    VARCHAR email
    VARCHAR password
    ENUM status "active | inactive | archived"
    TIMESTAMP created_at
    TIMESTAMP updated_at
  }

  companies {
    INT id PK
    INT tenant_id FK
    VARCHAR name
    VARCHAR vat
    VARCHAR email
    VARCHAR phone
    VARCHAR website
  }

  employees {
    INT id PK
    INT tenant_id FK
    INT company_id FK
    VARCHAR first_name
    VARCHAR last_name
    VARCHAR email
    VARCHAR phone
    VARCHAR position
  }

  persons {
    INT id PK
    INT tenant_id FK
    VARCHAR first_name
    VARCHAR last_name
    VARCHAR email
    VARCHAR phone
  }

  addresses {
    INT id PK
    INT tenant_id FK
    INT owner_company_id FK "nullable"
    INT owner_employee_id FK "nullable"
    INT owner_person_id FK "nullable"
    VARCHAR name
    VARCHAR street
    VARCHAR zip
    VARCHAR city
    VARCHAR country
    VARCHAR type "billing | shipping | site | apartment | house"
  }

  refresh_tokens {
    INT id PK
    INT user_id FK
    INT tenant_id FK
    VARCHAR refresh_token
    TIMESTAMP created_at
    TIMESTAMP expires_at
  }

%% -------------- Relationships --------------

  tenants ||--o{ users : "has"
  tenants ||--o{ companies : "has"
  tenants ||--o{ persons : "has"
  tenants ||--o{ employees : "has"
  tenants ||--o{ addresses : "has"

  companies ||--o{ employees : "has"
  companies ||--o{ addresses : "has"
  employees ||--o{ addresses : "has"
  persons ||--o{ addresses : "has"

  users ||--o{ refresh_tokens : "has"
